add shadows to cards

--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -1,4 +1,4 @@
-<form class="tc pa3 bg-white serif near-black"
+<form class="shadow-1 tc pa3 bg-white serif near-black"
       action="https://tinyletter.com/developerdavo-noreply"
       method="post"
       target="popupwindow"
