--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
     <section class="flex flex-wrap justify-around" >
       {{ range $section }}
         {{ $url := .Params.existingUrl | default .URL }}
-        <a href="{{ $url }}" class="relative w-100 w-30-l mb4-ns bb b--light-gray b--none-l bg-white link dim">
+        <a href="{{ $url }}" class="shadow-1 relative w-100 w-30-l mb4-ns bb b--light-gray b--none-l bg-white link dim">
           {{ .Render "summary" }}
         </a>
       {{ end }}
