Show each section as cards in single.html

--- a/layouts/partials/extra-content.html
+++ b/layouts/partials/extra-content.html
@@ -1,4 +1,4 @@
-<div class="pv4">
+<div class="shadow-1 bg-white pv4 pa3 nested-copy-line-height lh-copy mt2 serif f4-ns f5 nested-links nested-img mid-gray">
   <div class="f4 b">
     You might also like:
   </div>
