--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -1,4 +1,4 @@
-<form class="shadow-1 tc pa3 bg-white serif near-black"
+<form class="shadow-1 tc pa3 bg-white serif near-black nested-copy-line-height lh-copy mt2 serif f4-ns f5 nested-links nested-img"
       action="https://tinyletter.com/developerdavo-noreply"
       method="post"
       target="popupwindow"
