--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -18,7 +18,7 @@
       <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     {{ end }}
 
-    <link href='{{ "dist/styles.css" }}' rel='stylesheet' type="text/css" />
+    <link href='{{ "dist/main.css" | absURL }}' rel='stylesheet' type="text/css" />
     {{ block "favicon" . }}
       {{ partial "site-favicon.html" . }}
     {{ end }}
@@ -33,7 +33,7 @@
     {{- template "_internal/google_news.html" . -}}
     {{- template "_internal/schema.html" . -}}
 
-    <meta property="og:image" content='{{ "dist/img/logo-200w.png" }}'/>
+    <meta property="og:image" content='{{ "img/logo-200w.png" | absURL }}'/>
     <meta property="og:image:width" content="200"/>
     <meta property="og:image:height" content="200"/>
     <meta property="og:title" content="{{ .Title | default .Site.Title }}" />
