--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -33,7 +33,7 @@
     {{- template "_internal/google_news.html" . -}}
     {{- template "_internal/schema.html" . -}}
 
-    <meta property="og:image" content='{{ "img/logo-200w.png" | absURL }}'/>
+    <meta property="og:image" content='{{ "dist/img/logo-200w.png" | absURL }}'/>
     <meta property="og:image:width" content="200"/>
     <meta property="og:image:height" content="200"/>
     <meta property="og:title" content="{{ .Title | default .Site.Title }}" />
