Remove page-header and extract site-license

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "header" }}
-  {{ partial "page-header.html" . }}
+  {{ partial "site-navigation.html" . }}
 {{ end }}
 {{ define "main" }}
   <article class="f4-ns f5 pa5 tc">
