--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,5 +1,7 @@
 {{ define "header" }}
-  {{ partial "page-header.html" . }}
+<header>
+  {{ partial "site-navigation.html" . }}
+</header>
 {{ end }}
 
 {{ define "main" }}
