--- a/layouts/partials/site-scripts.html
+++ b/layouts/partials/site-scripts.html
@@ -1,2 +1,3 @@
+<script src="{{ "dist/index.js" | absURL }}"></script>
 <!--https://buttons.github.io/-->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
