Remove site navigation from footer in single.html

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -32,3 +32,6 @@
     {{ partial "link-to-repo.html" . }}
   </div>
 {{ end }}
+{{ define "footer" }}
+  {{ partial "site-license.html" . }}
+{{ end }}
