Move nav outside of header in single

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,7 +1,6 @@
 {{ define "header" }}
-<header>
-  {{ partial "site-navigation.html" . }}
-</header>
+<header></header>
+{{ partial "site-navigation.html" . }}
 {{ end }}
 
 {{ define "main" }}
