Rename index.js to single.js and add it to single.html

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -36,3 +36,7 @@
 {{ define "footer" }}
   {{ partial "site-license.html" . }}
 {{ end }}
+{{ define "scripts" }}
+  <script src="{{ "dist/single.js" | absURL }}"></script>
+  {{ partial "site-scripts.html" . }}
+{{ end }}
