Add social buttons again

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,9 @@
       {{ .Content }}
     </div>
     <div class="mt4">
+      {{ partial "social-buttons.html" . }}
+    </div>
+    <div class="mt4">
       {{ partial "subscribe.html" . }}
     </div>
   </article>
