--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -17,6 +17,9 @@
       <section class="nested-copy-line-height lh-copy mt2 serif f4-ns f5 nested-links nested-img mid-gray">
         {{ .Content }}
       </section>
+      <div class="mt4">
+        {{ partial "social-buttons.html" . }}
+      </div>
     </article>
   </div>
   <div class="mt1 pt1 center cf mw7">
