--- a/layouts/partials/site-scripts.html
+++ b/layouts/partials/site-scripts.html
@@ -1,3 +1,3 @@
-<script src="{{ "dist/social-buttons.js" | absURL }}"></script>
+<script src="{{ "dist/js/social-buttons.js" | absURL }}"></script>
 <!--https://buttons.github.io/-->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
