--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -40,6 +40,6 @@
   {{ partial "site-license.html" . }}
 {{ end }}
 {{ define "scripts" }}
-  <script src="{{ "dist/single.js" | absURL }}"></script>
+  <script src="{{ "dist/js/single.js" | absURL }}"></script>
   {{ partial "site-scripts.html" . }}
 {{ end }}
