Add absURL to 404.html

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -3,7 +3,7 @@
 {{ end }}
 {{ define "main" }}
   <article class="f4-ns f5 pa5 tc">
-    The requested page was not found. Return to <a href="/">home</a>.
+    The requested page was not found. Return to <a href='{{ "/" | absURL }}'>home</a>.
   </article>
 {{ end }}
 {{ define "footer" }}
