Update title and description in baseof and single

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    {{/* NOTE: the Site's title, and if there is a page title, that is set too */}}
-    <title>{{ block "title" . }}{{ .Site.Title }} {{ with .Title }} | {{ . }}{{ end }}{{ end }}</title>
-    <meta name="description" content="{{ .Site.Params.Description }}">
+    <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
+    <meta name="description" content='{{ block "description" . }}{{ .Site.Params.Description }}{{ end }}'>
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
 
