--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,3 +1,5 @@
+{{ define "title" }}{{ .Title }} | {{ .Site.Title }}{{ end }}
+{{ define "description" }}{{ .Params.excerpt }}{{ end }}
 {{ define "header" }}
 <header></header>
 {{ partial "site-navigation.html" . }}
