Add article class to single.html

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -7,23 +7,21 @@
 
 {{ define "main" }}
 <div class="main-wrapper">
-  <div class="flex-l mt2 mw8 center">
-    <article class="shadow-1 bg-white center cf pv3 ph3 ph4-ns mw7 mt5">
-      {{/* Hugo uses Go's date formatting is set by example. Here are two formats */}}
-      <time class="f6 mt2 dib tracked" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
-        {{ .Date.Format "January 2, 2006" }}
-      </time>
-      <h1 class="athelas">
-        {{ .Title }}
-      </h1>
-      <section class="nested-copy-line-height lh-copy mt2 serif f4-ns f5 nested-links nested-img mid-gray">
-        {{ .Content }}
-      </section>
-      <div class="mt4">
-        {{ partial "social-buttons.html" . }}
-      </div>
-    </article>
-  </div>
+  <article class="article">
+    {{/* Hugo uses Go's date formatting is set by example. Here are two formats */}}
+    <time class="f6 mt2 dib tracked" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+      {{ .Date.Format "January 2, 2006" }}
+    </time>
+    <h1 class="athelas">
+      {{ .Title }}
+    </h1>
+    <section class="nested-copy-line-height lh-copy mt2 serif f4-ns f5 nested-links nested-img mid-gray">
+      {{ .Content }}
+    </section>
+    <div class="mt4">
+      {{ partial "social-buttons.html" . }}
+    </div>
+  </article>
   <div class="mt1 pt1 center cf mw7">
     {{ partial "subscribe.html" . }}
   </div>
