--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -8,8 +8,7 @@
 {{ define "main" }}
 <div class="main-wrapper">
   <article class="article">
-    {{/* Hugo uses Go's date formatting is set by example. Here are two formats */}}
-    <time class="f6 mt2 dib tracked" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+    <time class="article__date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
       {{ .Date.Format "January 2, 2006" }}
     </time>
     <h1 class="athelas">
