--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -58,7 +58,7 @@ nav {
   background-color: #fff;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 30em) {
   .article {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -70,4 +70,32 @@ nav {
   margin-top: .5rem;
   display: inline-block;
   letter-spacing: .1em;
+}
+
+.article__title {
+  font-family: athelas, georgia, serif;
+}
+
+.article__content {
+  line-height: 1.5; 
+  margin-top: .5rem;
+  font-family: georgia, times, serif;
+  font-size: 1rem;
+  color: #555;
+}
+
+@media screen and (min-width: 30em) {
+  .article__content {
+    font-size: 1.25rem;
+  }
+}
+
+.article__content a {
+  color: currentColor;
+}
+
+.article__content a:hover, 
+.article__content a:focus {
+  opacity: .5; 
+  transition: opacity .15s ease-in;
 }
