Add article__social and article-extra css classes to single.html and add link-to-repo partial to footer

--- a/layouts/partials/link-to-repo.html
+++ b/layouts/partials/link-to-repo.html
@@ -1,4 +1,4 @@
-<div class="ph4 lh-copy serif f4-ns f5 mid-gray">
+<div class="ph4 lh-copy serif f4-ns f5 mid-gray mt4 tc">
   <span class="v-mid">
       The source code for this website can be found on
   </span>
