--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -30,12 +30,8 @@
   </div>
 </div>
 {{ end }}
-{{ define "footer" }}
-  <div> 
-    {{ partial "link-to-repo.html" . }}
-  </div>
-  <div> 
-    {{ partial "site-license.html" . }}
+{{ define "footer-nav" }}
+  <div></div>
 {{ end }}
 {{ define "scripts" }}
   <script src="{{ "js/single.js" | absURL }}"></script>
