Remove site-scripts

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -62,6 +62,6 @@
       </div>
       {{ end }}
     </footer>
-    {{ block "scripts" . }}{{ partial "site-scripts.html" . }}{{ end }}
+    {{ block "scripts" . }}{{ end }}
   </body>
 </html>
