--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -35,5 +35,8 @@
 {{ end }}
 {{ define "scripts" }}
   <script src="{{ "js/single.js" | absURL }}"></script>
+  <script src="{{ "js/social-buttons.js" | absURL }}"></script>
+  <!--https://buttons.github.io/-->
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
   {{ partial "site-scripts.html" . }}
 {{ end }}
