--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,7 @@
 @import "tachyons/css/tachyons.css";
 @import "ananke.css";
 @import "social-buttons.css";
+@import "site-navigation.css";
 @import "single.css";
 
 :root {
@@ -24,9 +25,4 @@
 
 .b--primary {
   border-color: var(--primary);
-}
-
-nav {
-  background-color: var(--primary-dark);
-  width: 100%;
 }
