--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,5 @@
 @import "tachyons/css/tachyons.css";
+@import "baseof.css";
 @import "ananke.css";
 @import "social-buttons.css";
 @import "site-navigation.css";
