--- a/src/css/index.css
+++ b/src/css/index.css
@@ -33,7 +33,7 @@
 }
 
 .index-excerpt {
-  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
+  @apply --card-shadow;
   position: relative;
   width: 100%;
   background-color: #fff;
