--- a/src/css/single.css
+++ b/src/css/single.css
@@ -9,7 +9,7 @@ body.fixed-nav-parent nav {
   max-width: 48rem;
   margin: 0 auto 0 auto;
   padding: 1rem;
-  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
+  @apply --card-shadow;
   background-color: #fff;
 }
 
