--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,7 +6,7 @@
   margin-left: auto;
   max-width: 34em;
   line-height: 1.5;
-  color: #555;
+  color: var(--text-color);
   @media (--not-small) {
     font-size: 1.25rem;
   }
