--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,13 +14,14 @@
   --primary: #1976d2;
   --primary-dark: #004ba0;
   --primary-light: #63a4ff;
+  --text-color: rgba(0, 0, 0, 0.84);
   --card-shadow: {
     box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
   }
 }
 
 .nested-links a {
-  color: #555;
+  color: var(--text-color);
 }
 
 .nested-links a:focus,
