--- a/layouts/partials/disqus.html
+++ b/layouts/partials/disqus.html
@@ -1,3 +1,3 @@
-<div class="shadow-1 bg-white tc pv4 pa3 nested-copy-line-height lh-copy mt2 serif f4-ns f5 nested-links nested-img mid-gray">
+<div class="disqus-wrapper">
   {{ template "_internal/disqus.html" . }}
 </div>
