--- a/layouts/partials/extra-content.html
+++ b/layouts/partials/extra-content.html
@@ -1,5 +1,5 @@
-<div class="shadow-1 bg-white pv4 pa3 nested-copy-line-height lh-copy mt2 serif f4-ns f5 nested-links nested-img mid-gray">
-  <div class="f4 b">
+<div class="extra-content-wrapper">
+  <div class="extra-content__title">
     You might also like:
   </div>
   <ul>
