--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,7 @@
 @import "single.css";
 @import "index.css";
 @import "disqus.css";
+@import "extra-content.css";
 
 @custom-media --not-small screen and (min-width: 30em);
 @custom-media --large screen and (min-width: 60em);
