--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,17 +7,14 @@
 @import "index.css";
 @import "disqus.css";
 @import "extra-content.css";
+@import "pre-styles.css";
 
 @custom-media --not-small screen and (min-width: 30em);
 @custom-media --large screen and (min-width: 60em);
 
 :root {
-  --primary: #1976d2;
-  --primary-dark: #004ba0;
-  --primary-light: #63a4ff;
-  --text-color: rgba(0, 0, 0, 0.84);
   --card-shadow: {
-    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2); 
   }
 }
 
