--- a/src/css/styl/global.styl
+++ b/src/css/styl/global.styl
@@ -4,3 +4,6 @@
   --primary-light: #63a4ff;
   --text-color: rgba(0, 0, 0, 0.84);
 }
+
+text-color = rgba(0, 0, 0, 0.84)
+text-color-light = rgba(0, 0, 0, 0.6)
