Add not-small variable to global.styl

--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -15,6 +15,6 @@
     line-height: 1.5
     font-family: georgia, times, serif
     font-size: 1rem
-    @media (--not-small) {
+    @media not-small {
       font-size: 1.25rem
     }
