Update stylus script

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,7 +7,7 @@
 @import "index.css";
 @import "disqus.css";
 @import "extra-content.css";
-@import "pre-styles.css";
+@import "dist/pre-styles.css";
 
 @custom-media --not-small screen and (min-width: 30em);
 @custom-media --large screen and (min-width: 60em);
