Add blog-extras-container style

--- a/layouts/partials/extra-content.html
+++ b/layouts/partials/extra-content.html
@@ -1,4 +1,4 @@
-<div class="extra-content-wrapper">
+<div class="blog-extras-container">
   <div class="extra-content__title">
     You might also like:
   </div>
