--- a/layouts/partials/disqus.html
+++ b/layouts/partials/disqus.html
@@ -1,3 +1,3 @@
-<div class="disqus-wrapper">
+<div class="blog-extras-container blog-extras-container--center">
   {{ template "_internal/disqus.html" . }}
 </div>
