Add card-shadow varibale to global.styl

--- a/src/css/styl/global.styl
+++ b/src/css/styl/global.styl
@@ -5,6 +5,8 @@
   --text-color: rgba(0, 0, 0, 0.84);
 }
 
+card-shadow
+  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2)
+not-small = "screen and (min-width: 30em)"
 text-color = rgba(0, 0, 0, 0.84)
 text-color-light = rgba(0, 0, 0, 0.6)
-not-small = "screen and (min-width: 30em)"
