--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -19,7 +19,7 @@
       font-size: 1.25rem
 
 .blog-extras-container
-  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2)
+  box-shadow: card-shadow
   background-color: white
   color: text-color
   padding: 1rem
