Replace baseof.css

--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -1,5 +1,9 @@
 @import 'global.styl'
 
+.body-wrapper
+  background-color: #f4f4f4
+  font-family: 'avenir next', avenir, sans-serif
+
 .summary 
   margin-bottom: 1rem
   padding: 2rem
