Remove global.styl

--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -1,4 +1,15 @@
-@import 'global.styl'
+:root {
+  --primary: #1976d2;
+  --primary-dark: #004ba0;
+  --primary-light: #63a4ff;
+  --text-color: rgba(0, 0, 0, 0.84);
+}
+
+card-shadow
+  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2)
+not-small = "screen and (min-width: 30em)"
+text-color = rgba(0, 0, 0, 0.84)
+text-color-light = rgba(0, 0, 0, 0.6)
 
 .body-wrapper
   background-color: #f4f4f4
