--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -5,8 +5,7 @@
   --text-color: rgba(0, 0, 0, 0.84);
 }
 
-card-shadow
-  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2)
+card-shadow = 0 0 4px 2px rgba(0, 0, 0, 0.2)
 not-small = "screen and (min-width: 30em)"
 text-color = rgba(0, 0, 0, 0.84)
 text-color-light = rgba(0, 0, 0, 0.6)
