Add missing css class to extra-content

--- a/layouts/partials/extra-content.html
+++ b/layouts/partials/extra-content.html
@@ -1,5 +1,5 @@
 <div class="blog-extras-container">
-  <div class="extra-content__title">
+  <div class="blog-extras-container__title">
     You might also like:
   </div>
   <ul>
