Add subscribe css classes to pre-styles

--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -1,12 +1,11 @@
-<form class="shadow-1 tc pa3 bg-white serif near-black nested-copy-line-height lh-copy mt2 serif f4-ns f5 nested-links nested-img"
+<form class="blog-extras-container blog-extras-container--center"
       action="https://tinyletter.com/developerdavo-noreply"
       method="post"
       target="popupwindow"
       onsubmit="window.open('https://tinyletter.com/developerdavo-noreply', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
-  <h4><label for="tlemail">Enter your email to receive the latest content!</label></h4>
-  <p><input class='f4 tl reset ba b--black-20 pa2 mb2 w-80 mid-gray' type="text" name="email" id="tlemail"/></p>
+  <label class='blog-extras-container__title' for="tlemail">Enter your email to receive the latest content!</label>
+  <p><input class='subscribe__input' type="text" name="email" id="tlemail"/></p>
   <input type="hidden" value="1" name="embed"/>
-  <input class='pointer dib ph2 pv1 ba br2 b--primary bg-primary f5 white link dim ' type="submit" 
-  value="Subscribe"/>
+  <button class='subscribe__submit-btn' type="submit">Subscribe</button>
 </form>
 
