--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -1,12 +1,6 @@
-:root {
-  --primary: #1976d2;
-  --primary-dark: #004ba0;
-  --primary-light: #63a4ff;
-  --text-color: rgba(0, 0, 0, 0.84);
-}
-
 card-shadow = 0 0 4px 2px rgba(0, 0, 0, 0.2)
 not-small = "screen and (min-width: 30em)"
+primary = #1976d2;
 text-color = rgba(0, 0, 0, 0.84)
 text-color-light = rgba(0, 0, 0, 0.6)
 
@@ -53,3 +47,30 @@ text-color-light = rgba(0, 0, 0, 0.6)
     font-weight: bolder
   &--center
     text-align: center
+  
+  .subscribe
+    &__input
+      border-style: solid
+      border-width: 1px
+      border-color: rgba( 0, 0, 0, .2 )
+      padding: .5rem
+      margin-bottom: .5rem
+      width: 80%
+      @media not-small
+        font-size: 1.25rem
+    &__submit-btn
+      display: inline-block
+      padding: 0.25rem 0.5rem 0.25rem 0.5rem
+      background-color: primary
+      border-radius: .25rem
+      border-style: solid
+      border-width: 1px
+      border-color: primary
+      color: white
+      text-align: center
+      &:hover 
+        cursor: pointer
+      &:hover 
+      &:focus 
+        opacity: 0.5
+        transition: opacity 0.15s ease-in
