Add link-to-repo css classes to pre-styles

--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -31,8 +31,8 @@ text-color-light = rgba(0, 0, 0, 0.6)
   background-color: white
   color: text-color
   padding: 1rem
-  line-height: 1.5
   margin-top: 0.5rem
+  line-height: 1.5
   font-family: georgia, times, serif
   font-size: 1rem
   @media not-small
@@ -74,3 +74,18 @@ text-color-light = rgba(0, 0, 0, 0.6)
       &:focus 
         opacity: 0.5
         transition: opacity 0.15s ease-in
+
+.link-to-repo
+  vertical-align: middle
+  text-align: center
+  margin: 2rem auto 0
+  color: text-color
+  line-height: 1.5
+  font-family: georgia, times, serif
+  font-size: 1rem
+  @media not-small
+    font-size: 1.25rem
+  &__button
+    display: inline
+    margin-left: .25rem
+
