--- a/layouts/partials/link-to-repo.html
+++ b/layouts/partials/link-to-repo.html
@@ -1,8 +1,6 @@
-<div class="ph4 lh-copy serif f4-ns f5 mid-gray mt4 tc">
-  <span class="v-mid">
-      The source code for this website can be found on
-  </span>
-  <div id="github-repo-button" class="ml1 di">
+<div class="link-to-repo">
+  The source code for this website can be found on
+  <div id="github-repo-button" class="link-to-repo__button">
     <a class="github-button" href="https://github.com/DeveloperDavo/learnitmyway"
        data-size="large" aria-label="Star DeveloperDavo/learnitmyway on GitHub">GitHub</a>
   </div>
