--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -4,6 +4,18 @@ primary = #1976d2;
 text-color = rgba(0, 0, 0, 0.84)
 text-color-light = rgba(0, 0, 0, 0.6)
 
+link() 
+  opacity: 0.5
+  transition: opacity 0.15s ease-in
+
+common-text() 
+  color: text-color
+  line-height: 1.5
+  font-family: georgia, times, serif
+  font-size: 1rem
+  @media not-small
+    font-size: 1.25rem
+
 .body-wrapper
   background-color: #f4f4f4
   font-family: 'avenir next', avenir, sans-serif
@@ -19,30 +31,20 @@ text-color-light = rgba(0, 0, 0, 0.6)
   &__title 
     font-size: 1.5rem
   &__excerpt
+    common-text()
     color: text-color-light
-    line-height: 1.5
-    font-family: georgia, times, serif
-    font-size: 1rem
-    @media not-small
-      font-size: 1.25rem
 
 .blog-extras-container
   box-shadow: card-shadow
   background-color: white
-  color: text-color
   padding: 1rem
   margin-top: 0.5rem
-  line-height: 1.5
-  font-family: georgia, times, serif
-  font-size: 1rem
-  @media not-small
-    font-size: 1.25rem
+  common-text()
   & a
     color: currentColor
     &:hover
     &:focus 
-      opacity: 0.5
-      transition: opacity 0.15s ease-in
+      link()
   &__title
     font-weight: bolder
   &--center
@@ -56,8 +58,7 @@ text-color-light = rgba(0, 0, 0, 0.6)
       padding: .5rem
       margin-bottom: .5rem
       width: 80%
-      @media not-small
-        font-size: 1.25rem
+      common-text()
     &__submit-btn
       display: inline-block
       padding: 0.25rem 0.5rem 0.25rem 0.5rem
@@ -72,19 +73,13 @@ text-color-light = rgba(0, 0, 0, 0.6)
         cursor: pointer
       &:hover 
       &:focus 
-        opacity: 0.5
-        transition: opacity 0.15s ease-in
+        link()
 
 .link-to-repo
   vertical-align: middle
   text-align: center
   margin: 2rem auto 0
-  color: text-color
-  line-height: 1.5
-  font-family: georgia, times, serif
-  font-size: 1rem
-  @media not-small
-    font-size: 1.25rem
+  common-text()
   &__button
     display: inline
     margin-left: .25rem
